<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <POU Name="FC1" Id="{074c899e-b7bc-4708-a16b-b66a3c6ea215}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FC1
VAR_INPUT
	uncalFTPV : LREAL := 0;
	PID : FB_CTRL_PID_EXT := (eMode := E_CTRL_MODE.eCTRL_MODE_MANUAL);
END_VAR
VAR_IN_OUT
	FTOLS : OLSResult;
	pumpOLS : OLSResult;
	pump : sMasterflexPort;
	ft : AI;
	sPID : ST_CTRL_PID_EXT_PARAMS;
END_VAR
VAR_OUTPUT

END_VAR
VAR
	PV : LREAL := 0.0;
	OUT : LREAL := 0.0;
	Out_H: LREAL := 0.0;
	sync : BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[PV := FTOLS.m * ft.pvfilt + FTOLS.b;
PID(stParams := sPID, fActualValue := PV, bSync := sync);
OUT := DINT_TO_LREAL(LREAL_TO_DINT(PID.fOut*10.0))/10.0; //round to tenth

CASE PID.eState OF
E_CTRL_STATE.eCTRL_STATE_ACTIVE:
	sync := TRUE;
	IF OUT <> out_h THEN
		pump.fSpeedSP_RQ := OUT;
	END_IF
ELSE
	PID.fManSyncValue := pump.fSpeedSP;
	PID.fSetpointValue := PV;
	sync := FALSE;
END_CASE

out_h := OUT;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>