<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <POU Name="MasterflexFlow2Speed" Id="{7ef59352-25be-4e74-9a7b-c92105b909a2}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION MasterflexFlow2Speed : LREAL
VAR_INPUT
	flow : LREAL;
	sPort : sMasterflexPort;
END_VAR
VAR
	b : LREAL;
	m : LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[b := 0.0;
CASE sPort.nTubeSize OF
	13:
//		m := 8.083/2.0; b := -3.323/2.0;     //Experimental data - Dean Hale, 
		m := 7.999/2.0; b := 0.0; 			 //Experimental data, 0 intercept - Dean Hale, 
	14:
		m := 130.0/600.0; //from Masterflex data
	16:
//		m := 0.5789/2.0; b := 6.0899/2.0;    //Experimental data - Dean Hale, 
		m := 0.5925/2.0; b := 0.0; 			 //Experimental data, 0 intercept - Dean Hale, 
	17:
		m := 1700.0/600.0; //from Masterflex data
	18:
		m := 2300.0/600.0; //from Masterflex data
	25:
		m := 1000.0/600.0; //from Masterflex data
	135:
		m := 88.4/600.0; //extrapolated from Masterflex data
	ELSE
		m := 0.0;
END_CASE
MasterflexFlow2Speed := ((m * flow) + b) * INT_TO_LREAL(sPort.nHeads);
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>