<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <POU Name="fbMasterflex" Id="{e9d9dcfc-e8d6-41b7-852b-373672672fc5}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK fbMasterflex
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	//Pump control
	fbPumpControl : fbMasterflexControl;
	m : LREAL;
	b : LREAL;
END_VAR

VAR_IN_OUT
	sPort : sMasterflexPort;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Translate flow setpoint request to RPM
IF sPort.fFlowSP_RQ >= 0.0 THEN
	sPort.fSpeedSP_RQ := MasterflexFlow2Speed(flow := sPort.fFlowSP_RQ, sPort := sPort);
	sPort.fFlowSP_RQ := -100;
END_IF

//Call pump serial port handler
fbPumpControl(sPort := sPort);

//Calculate derived values
sPort.fFlowSP := MasterflexSpeed2Flow(speed := sPort.fSpeedSP, sPort := sPort);
sPort.fFlowPV := MasterflexSpeed2Flow(speed := sPort.fSpeedPV, sPort := sPort);
IF sPort.fSpeedPV >= 0.1 THEN
	sPort.fPeriodMS := 60000.0/INT_TO_LREAL(sPort.nHeads)/4.0/sPort.fSpeedPV;
ELSE
	sPort.fPeriodMS := 1000.0; //avoid divide by zero
END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>