<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <POU Name="CC1" Id="{c610cf04-8214-416c-b573-c59ba9a3f056}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK CC1
//Concentration Control
//Sets FC Setpoints to achieve target concentration.  At this point no feedback.
VAR_INPUT
	mode : UINT := 0; //0 = manual, 1=Final conc and total flow set directly
	API_Concentration : LREAL := 1.0; //	API Concentration in mg/mL
	conc : sAnalogConstraint := (sp := 0.0, rq := -100.0, mn := 0.0, mx := 1.0);
	a : sAnalogConstraint := (sp := 0.0, rq := -100.0, mn := 2.0, mx := 70.0);
	b : sAnalogConstraint := (sp := 0.0, rq := -100.0, mn := 20.0, mx := 500.0);
	c : sAnalogConstraint := (sp := 0.0, rq := -100.0, mn := 0.0, mx := 500.0);
END_VAR
VAR_IN_OUT
	FCA : FC1b;
	FTA : AI;
	FCB : FC1b;
	FTB : AI;
	PumpA : sMasterflexPort;
	PumpB : sMasterflexPort;
	
END_VAR
VAR_OUTPUT
END_VAR
VAR
	cRatio : LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Set FCA and FCB via final flow and concentration
a.rq := c.rq * conc.rq/MAX(0.0001,API_Concentration);
b.rq := c.rq - a.rq;
IF a.rq < 0.0 OR a.rq > a.mx OR b.rq < 0.0 OR b.mx > b.mx OR
   c.rq < c.mn OR c.rq > c.mx OR conc.rq < 0.0 OR conc.rq > API_Concentration THEN
	//calculated flows outside ranges, ignore concentration and total flow requests
	a.rq := a.sp;
	b.rq := b.sp;
	c.rq := c.sp;
	conc.rq := conc.sp;
ELSE
	//flows are in range, change the target to match the request
	a.sp := a.rq;
	b.sp := b.rq;
	c.sp := c.rq;
	conc.sp := conc.rq;
END_IF

//set flow control setpoint and pump on/off command for API and buffer (both have to be on or both off)
//drive pumps and speed setpoints
IF mode = 1 THEN  //only set flow rates and pump states if in Auto
	IF a.sp > a.mn AND b.sp > b.mn THEN //flows are all above minimums
		FCA.SP := a.sp;
		IF NOT PumpA.bRun THEN
			PumpA.nRun_RQ := 1;
		END_IF
		FCB.SP := b.sp;
		IF NOT PumpB.bRun THEN
			PumpB.nRun_RQ := 1;
		END_IF
	ELSE //a flow is too low
		FCA.SP := a.mn;
		IF PumpA.bRun THEN
			PumpA.nRun_RQ := 0;
		END_IF
		FCB.SP := b.mn;
		IF PumpB.bRun THEN
			PumpB.nRun_RQ := 0;
		END_IF
	END_IF
END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>